<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_height="800px">

        <ImageView
            android:layout_width="343dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/logo_restaurante" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="800px">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_usuario" />

            <EditText
                android:id="@+id/edtusuario"
                android:layout_width="match_parent"
                android:layout_height="200px"
                android:hint="@string/edt_user"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txv_clave" />

            <EditText
                android:id="@+id/edtclave"
                android:layout_width="match_parent"
                android:layout_height="200px"
                android:hint="@string/edt_clave"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_margin="20dp"

                android:src="@drawable/logo_2" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:onClick="login"
            android:text="@string/txt_boton" />
    </LinearLayout>
</LinearLayout>